--- a/sumthis.ai/src/index.css
+++ b/sumthis.ai/src/index.css
@@ -1,10 +1,12 @@
+@import "tailwindcss";
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgb(0, 0, 0);
   background-color: #242424;
 
   font-synthesis: none;
@@ -13,16 +15,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  height: 100%;
   margin: 0;
   display: flex;
   place-items: center;
