--- a/sumthis.ai/src/App.css
+++ b/sumthis.ai/src/App.css
@@ -3,6 +3,7 @@
   padding: 2rem;
   text-align: center;
   position: relative;
+  min-width: 400px;
 }
 
 .logo {
@@ -30,6 +31,21 @@
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
+  }
+}
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  #pdf-content, #pdf-content * {
+    visibility: visible;
+  }
+  #pdf-content {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
   }
 }
 
